--- a/client/src/components/taskList/TaskList.css
+++ b/client/src/components/taskList/TaskList.css
@@ -3,12 +3,11 @@
   align-items: flex-start;
   gap: 10px;
   padding-left: 5px;
-  min-height: 25px;
   max-height: fit-content;
   cursor: pointer;
 }
 
-.task p {
+.task p  {
   width: 80%; /* fixes the check box squishing */
 }
 
